--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>My Page</title>
+    <title>Math Test</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    
 </head>
 
 <body>
@@ -54,8 +55,8 @@
     
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"></script>
     </div>
+     <script src="script.js"></script>
 </body>
 
 </html>
