--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <title>Math Test</title>
   <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
 
+<svg display="none">
+  <defs>
+    <filter id="turb">
+      <feTurbulence baseFrequency="10" numOctaves="2" />
+      <feDisplacementMap in="SourceGraphic" scale="1.7" />
+    </filter>
+  </defs>
+</svg>
 </head>
 
 <body>
